added PDF to JPG conversion