@@ -11,7 +11,7 @@ if %MVN3_HOME%=="" (mvn clean package) else (start %MVN3_HOME%/mvn clean package
 exit /b 0
 
 :run
-if %JAVA19_HOME%=="" (start "hamleyproc" java -jar hamley.jar) else (start "hamleyproc" %JAVA19_HOME%/java -jar hamley.jar)
+if %JAVA19_HOME%=="" (start "hamleyproc" java --add-opens java.base/java.net=ALL-UNNAMED --add-opens java.base/sun.net.www.protocol.https=ALL-UNNAMED -jar hamley.jar debug) else (start "hamleyproc" %JAVA19_HOME%/java --add-opens java.base/java.net=ALL-UNNAMED --add-opens java.base/sun.net.www.protocol.https=ALL-UNNAMED -jar hamley.jar debug)
 exit /b 0
 
 :checkState
